Small updates for Gnome/Debian setup

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,6 +7,7 @@ italic_font JetBrainsMono Nerd Font
 # Appearance
 background_opacity 0.9
 background_blur 32
+hide_window_decorations yes
 
 # BEGIN_KITTY_THEME
 # Tokyo Night
