Added complete Hyprland setup

--- a/hyprland/kitty/kitty.conf
+++ b/hyprland/kitty/kitty.conf
@@ -10,6 +10,6 @@ background_blur 32
 hide_window_decorations yes
 
 # BEGIN_KITTY_THEME
-# Gruvbox Dark Hard
+# Tokyo Night
 include current-theme.conf
 # END_KITTY_THEME
