--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -1,14 +1,14 @@
 ################
 ### MONITORS ###
 ################
-monitor = DP-2, 3840x2160@60, 0x0, 1
+monitor = DP-2, 3840x2160@59.98, 0x0, 1
 
 ###################
 ### MY PROGRAMS ###
 ###################
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = tofi-drun | xargs hyprctl dispatch exec --
 $browser = zen-browser
 
 #################
@@ -30,10 +30,10 @@ general {
     gaps_in = 5
     gaps_out = 10
 
-    border_size = 2
+    border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(fe8019ee) 
+    col.active_border = rgba(c0caf5ee) 
     col.inactive_border = rgba(928374aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
