--- a/hyprland/waybar/config.jsonc
+++ b/hyprland/waybar/config.jsonc
@@ -1,6 +1,6 @@
 {
     "layer": "top",
-    "position": "bottom",
+    "position": "top",
     "spacing": 0,
     "height": 32,
 
@@ -32,7 +32,7 @@
     },
 
     "clock": {
-        "format": "{:%I:%M %p - %a, %d %b %Y}",
+        "format": "{:%H:%M - %a, %d %b %Y}",
         "tooltip": false
     },
 
@@ -66,7 +66,7 @@
 
     "network": {
         "format-wifi" : "wifi {bandwidthDownBits}",
-        "format-ethernet": "enth {bandwidthDownBits}",
+        "format-ethernet": "eth {bandwidthDownBits}",
         "format-disconnected" : "no network",
         "interval": 5,
         "tooltip": false
