--- a/hyprland/waybar/config.jsonc
+++ b/hyprland/waybar/config.jsonc
@@ -10,10 +10,11 @@
     "margin-left": 0,
 
     "modules-left": [
+	      "hyprland/workspaces"
     ],
 
     "modules-center": [
-	"hyprland/workspaces"
+	      "clock"
     ],
 
     "modules-right": [
@@ -21,8 +22,7 @@
         "cpu",
         "memory",
         "network",
-        "pulseaudio",
-	"clock"
+        "pulseaudio"
     ],
 
     "hyprland/workspaces": {
